# case_embalagens

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  nb_refatored.ipynb
project_data_engineer/: airflow.cfg  (+4 more)
project_data_science/: .env.example  README.md  pyproject.toml  requirements.txt  run_streamlit.sh  test_catboost_fix.py
project_data_science/.code_quality/: mypy.ini
project_data_science/data/: README.md
project_data_science/data/01 - raw/: README.md
project_data_science/data/02 - trusted/: README.md  tb_itens_sample.csv
project_data_science/data/02 - trusted/parquet/: tb_clientes.parquet  tb_facas.parquet  tb_maquina.parquet  tb_paradas.parquet
project_data_science/data/03 - ml/: README.md  pedidos_itens_diff_sample.csv
project_data_science/data/04 - refined/: README.md  tb_clientes.parquet  tb_facas.parquet  tb_maquinas.parquet  tb_paradas.parquet  tb_tarefcon.parquet
project_data_science/docs/: APRESENTACAO_PROJETO.md  HIPOTESES_LEVANTADAS.md  NOTEBOOKS_REORGANIZATION.md  POC_TO_PRODUCTION.md  PRODUCTION_IMPROVEMENTS.md  STREAMLIT_FORMULARIO_NOVO.md  STREAMLIT_INPUT_ANALYSIS.md  data_quality_clientes.md
project_data_science/docs/Analise/: dicionario_dados.html
project_data_science/notebooks/: NOTEBOOK_RENAMING_MAP.md  nb_piloto.ipynb
project_data_science/notebooks/01-eda-tables/: 03.0-rn-eda-facas-20240101.ipynb  07.0-rn-eda-paradas-20240101.ipynb  08.0-rn-eda-tarefcon-20240101.ipynb  README.md
project_data_science/notebooks/02-eda-cross/: 12.0-rn-cross-tarefcon-itens-20240101.ipynb  README.md
project_data_science/notebooks/03-preprocessing/: 20.0-rn-preprocessing-refined-20240101.ipynb  21.0-rn-preprocessing-itens-20240101.ipynb  22.1-rn-preprocessing-pedidos-v2-20240101.ipynb  README.md  tasks.md
project_data_science/notebooks/04-production/: 00.0-rn-overview-pilot-20240101.ipynb  30.0-rn-production-temporal-association-20240101.ipynb  README.md
project_data_science/notebooks/05-data-loading/: 51.0-rn-load-raw-sql-20240101.ipynb  README.md
project_data_science/notebooks/eda/: 00.nb_nomeclaura_cols.ipynb  02.nb_eda_clientes.ipynb  03.nb_eda_facas.ipynb  05.nb_eda_itens.ipynb  05.nb_eda_itens2.ipynb  06.nb_eda_pedidos.ipynb  07.nb_eda_paradas.ipynb  08.nb_tarefcon.ipynb  data_engineer.md  quests_analytics.md  quests_itens.txt  to_do.md
project_data_science/notebooks/experiments/: README.md
project_data_science/src/: README.md  app.py  app2.py  config.py  config_manager.py  logger.py
project_data_science/src/analysis/: README.md  data_processing.py
project_data_science/src/app/: __init__.py  config.py  data_analyzer.py  openai_insights.py  requirements.txt  streamlit_app.py  train_and_save_models.py  utils.py
project_data_science/src/dashboards/: README.md  dashboard_main.py
project_data_science/src/data/: README.md  conn_oracle.py  conn_sql.py  data_clean.py  data_quality_analytics.py  data_quality_tarefcon.py  data_treatment.py
project_data_science/src/features/: README.md  __init__.py  build_features.py
project_data_science/src/inference/: __init__.py
project_data_science/src/ml_artifacts/: __init__.py  model_persistence.py
project_data_science/src/model/: example_load_and_predict.py
project_data_science/src/models/: README.md  __init__.py  predict_model.py  train_model.py
project_data_science/src/pipelines/: __init__.py
project_data_science/src/viz/: README.md  plots.py
project_data_science/tests/: test_config.py  test_features.py  test_model_persistence.py  test_models.py  test_pipeline_corrections.py
project_data_science/tests/shared/: test_preprocessing.py
(+205 files in other folders)
