[project]
name = "adami_ds"
version = "0.1.0"
description = "Projeto voltado para otimização dos processos da Adami em conjunto da AMCOM"
authors = [
    "Raphael Norris <raphael.norris@example.com>",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Data manipulation
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",

    # Database connections
    "oracledb>=2.0.0",
    "pymssql>=2.2.0",
    "pyodbc>=5.0.0",

    # Machine Learning
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",

    # Visualization
    "plotly>=5.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",

    # Web framework
    "streamlit>=1.28.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.65.0",
    "loguru>=0.7.0",

    # Data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Other
    "selenium>=4.14.0",
    "webdriver-manager>=3.8.6",
    "PyJWT>=2.10.1",
]

[project.urls]
documentation = "https://RaphaelNorris.github.io/amcom_adami"
repository = "https://github.com/RaphaelNorris/amcom_adami"

[dependency-groups]
dev = [
    # Code quality
    "pre-commit>=4.2.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",

    # Testing
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",

    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.25.0",
    "nbstripout>=0.7.0",

    # Type stubs
    "pandas-stubs>=2.0.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",

    # Project management
    "cruft[pyproject]>=2.15.0",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.28.1",
    "pymdown-extensions>=10.14.3",
]

airflow = [
    "apache-airflow>=2.7.0",
    "apache-airflow-providers-apache-spark>=4.0.0",
]

[tool.uv]
package = false
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
